# ComfyUI-BjornulfNodes

./: .gitignore  API_StableDiffusion.py  API_civitai.py  API_falAI.py  API_flux.py  CUSTOM_STRING.py.txt  README _FR.md  README.md  TODO  __init__.py  add_line_numbers.py  anything_to_text.py  audio_video_sync.py  bell.m4a  character_description.py  clear_vram.py.txt  combine_background_overlay.py  combine_images.py  combine_texts.py  combine_video_audio.py  concat_videos.py  concat_videos_from_list.py  create_seed_from_text.txt  create_video.py  example_tts.webm  ffmpeg_configuration.py  ffmpeg_convert.py  free_vram_hack.py  green_to_transparency.py  if_else.py  image_details.py  image_mask_cutter.py  image_to_grayscale.py  images_merger_horizontal.py  images_merger_vertical.py  images_to_video.py  images_to_video_path.py  latent_resolution_selector.py  load_image_alpha.py  load_images_from_folder.py  (+68 more)
SaveText/: SaveText.txt  SaveText_001.txt  SaveText_002.txt
characters/: Albertine.json  Amina.json  Chinedu.json  Jessica.json  Julien.json  Lily.json  Lukas.json  Marcel.json  Sean.json  Vanessa.json
civitai/: parsed_flux.1_d_models.json  parsed_flux.1_s_models.json  parsed_illustrious_models.json  parsed_lora_flux.1_d_loras.json  parsed_lora_pony_loras.json  parsed_lora_sd_1.5_loras.json  parsed_lora_sdxl_1.0_loras.json  parsed_other_models.json  parsed_pony_models.json  parsed_sd_1.5_hyper_models.json  parsed_sd_1.5_lcm_models.json  parsed_sd_1.5_models.json  parsed_sd_2.0_768_models.json  parsed_sd_2.0_models.json  parsed_sd_2.1_768_models.json  parsed_sd_2.1_models.json  parsed_sd_3.5_models.json  parsed_sd_3_models.json  parsed_sdxl_1.0_models.json  parsed_sdxl_hyper_models.json  parsed_sdxl_lightning_models.json  parsed_sdxl_turbo_models.json
scrambler/: character_scrambler.json
web/js/: API_civitai.js  BJORNULF_TYPES.js.txt  (+34 more)
workflows/: FLUX_dev_troll.json  FLUX_troll_test.json
