[project]
name = "ComfyUI-BjornulfNodes"
description = "Nodes: Ollama, Text to Speech, Combine Texts, Random Texts, Save image for Bjornulf LobeChat, Text with random Seed, Random line from input, Combine images, Image to grayscale (black & white), Remove image Transparency (alpha), Resize Image, ..."
version = "0.52"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/justUmen/Bjornulf_custom_nodes"
# Repository = "https://github.com/justUmen/ComfyUI-BjornulfNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bjornulf"
DisplayName = "ComfyUI-BjornulfNodes"
Icon = ""
